fixed sidebar with spacing

--- a/styles.css
+++ b/styles.css
@@ -132,4 +132,29 @@ table {
 
 body {
   display: grid;
+  gap: 10px;
+  grid-template-columns: 0.5fr 3fr;
+  grid-template-rows: 1fr 4fr;
+  height: 100vh;
+}
+header {
+  grid-column: 2/3;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+aside {
+  display: grid;
+  gap: 10px;
+  grid-template-rows: 50px 200px 100px;
+  grid-column: 1/2;
+  grid-row: 1/3;
+  background-color: teal;
+}
+aside .sidebar-logo {
+  display: grid;
+}
+aside .sidebar-content {
+  display: grid;
+  gap: 5px;
 }
